# agent-of-empires

./: .git-blame-ignore-revs  AGENTS.md  CHANGELOG.md  Cargo.toml
acp-worker/aoe-agent/: package-lock.json  package.json
aoe-plugin-api/: Cargo.toml
aoe-plugin-api/src/: capability.rs  id.rs  lib.rs  manifest.rs
aoe-plugin-api/tests/: manifest.rs
contrib/plugin-template/: README.md  aoe-plugin.toml  worker.mjs
docs/: plugins.md
docs/cli/: reference.md
docs/cockpit/: interface.md
docs/development/: writing-plugins.md
docs/guides/: configuration.md
docs/structured-view/: interface.md  troubleshooting.md
plugins/: featured.toml
plugins/aoe-attention/: aoe-plugin.toml
plugins/aoe-status/: aoe-plugin.toml
src/: agents.rs  file_watch.rs  lib.rs  main.rs
src/acp/: acp_client.rs  event_store.rs  runner.rs  supervisor.rs
src/cli/: acp.rs  add.rs  context.rs  curator.rs  definition.rs  group.rs  mod.rs  plugin.rs  project.rs  remove.rs  settings_cmd.rs
src/events/: mod.rs
src/git/: remote.rs
src/github/: client.rs  mod.rs  resolver.rs  service.rs  status.rs
src/hooks/: mod.rs
src/migrations/: mod.rs  v015_rewrite_hook_strings.rs
src/plugin/: core_overrides.rs  fetch.rs  grants.rs  host.rs  install.rs  integrity.rs  lockfile.rs  mod.rs  registry.rs  settings.rs  source.rs  view.rs
src/process/: worker.rs
src/server/: acp_reconciler.rs  live_ws.rs  mod.rs
src/session/: builder.rs  capture.rs  config.rs  curator.rs  group_context.rs  groups.rs  instance.rs  mod.rs  (+6 more)
tests/: curator_cli.rs  group_context_cli.rs  plugin_install.rs
(+100 files in other folders)
