[package]
name = "aoe-plugin-api"
version = "0.1.0"
edition = "2021"
publish = false
description = "Plugin manifest and capability types for the Agent of Empires plugin system (#268)"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.1"
thiserror = "2.0"
